dim/spec/test_input/invalid_input/modules/valid_test_2.dim
document: valid_test_1

ESR-0010-4138:
  text: req2
